@@ -6,7 +6,6 @@
 #' @references Mroz, Edmund A. et al. Intra-Tumor Genetic Heterogeneity and Mortality in Head and Neck Cancer: Analysis of Data from The Cancer Genome Atlas. Ed. Andrew H. Beck. PLoS Medicine 12.2 (2015): e1001786.
 #'
 #' @param maf an \code{\link{MAF}} object generated by \code{\link{read.maf}}
-#' @param plotFile file name for output plot.
 #' @param vafCol manually specify column name for vafs. Default looks for column 't_vaf'
 #' @param sampleName sample name for which MATH score to be calculated. If NULL, calculates for all samples.
 #' @param vafCutOff minimum vaf for a variant to be considered for score calculation. Default 0.075
@@ -19,7 +18,7 @@
 #' @export
 
 
-math.score = function(maf, plotFile = NULL, vafCol = NULL, sampleName = NULL, vafCutOff = 0.075){
+math.score = function(maf, vafCol = NULL, sampleName = NULL, vafCutOff = 0.075){
 
   if(is.null(sampleName)){
     sampleName = as.character(getSampleSummary(maf)[,Tumor_Sample_Barcode])
