@@ -22,6 +22,7 @@
 #' @param cnTable Custom copynumber data if gistic results are not available. Input file or a data.frame should contain three columns with gene name, Sample name and copy number status (either 'Amp' or 'Del'). Default NULL.
 #' @param isTCGA Is input MAF file from TCGA source. If TRUE uses only first 12 characters from Tumor_Sample_Barcode.
 #' @param removeDuplicatedVariants removes repeated variants in a particuar sample, mapped to multiple transcripts of same Gene. See Description. Default TRUE.
+#' @param vc_nonSyn NULL. Provide manual list of variant classifications to be considered as non-synonymous. Rest will be considered as silent variants. Default uses Variant Classifications with High/Moderate variant consequences. http://asia.ensembl.org/Help/Glossary?id=535: "Frame_Shift_Del", "Frame_Shift_Ins", "Splice_Site", "Translation_Start_Site","Nonsense_Mutation", "Nonstop_Mutation", "In_Frame_Del","In_Frame_Ins", "Missense_Mutation"
 #' @param verbose TRUE logical. Default to be talkative and prints summary.
 #' @return An object of class MAF.
 #' @examples
@@ -34,7 +35,7 @@
 
 
 read.maf = function(maf, clinicalData = NULL, removeDuplicatedVariants = TRUE, useAll = TRUE, gisticAllLesionsFile = NULL, gisticAmpGenesFile = NULL,
-                    gisticDelGenesFile = NULL, gisticScoresFile = NULL, cnLevel = 'all', cnTable = NULL, isTCGA = FALSE, verbose = TRUE){
+                    gisticDelGenesFile = NULL, gisticScoresFile = NULL, cnLevel = 'all', cnTable = NULL, isTCGA = FALSE, vc_nonSyn = NULL, verbose = TRUE){
 
   #1. Read MAF if its a file or convert to data.table if its data.frame
   if(is.data.frame(x = maf)){
@@ -74,12 +75,17 @@ read.maf = function(maf, clinicalData = NULL, removeDuplicatedVariants = TRUE, u
 
   #4. Seperate synonymous variants from non-syn variants
     #Variant Classification with Low/Modifier variant consequences. http://asia.ensembl.org/Help/Glossary?id=535
-  silent = c("3'UTR", "5'UTR", "3'Flank", "Targeted_Region", "Silent", "Intron",
-             "RNA", "IGR", "Splice_Region", "5'Flank", "lincRNA", "De_novo_Start_InFrame", "De_novo_Start_OutOfFrame", "Start_Codon_Ins", "Start_Codon_SNP", "Stop_Codon_Del")
+  if(is.null(vc_nonSyn)){
+    vc.nonSilent = c("Frame_Shift_Del", "Frame_Shift_Ins", "Splice_Site", "Translation_Start_Site",
+                     "Nonsense_Mutation", "Nonstop_Mutation", "In_Frame_Del",
+                     "In_Frame_Ins", "Missense_Mutation")
+  }else{
+    vc.nonSilent = vc_nonSyn
+  }
+  # silent = c("3'UTR", "5'UTR", "3'Flank", "Targeted_Region", "Silent", "Intron",
+  #            "RNA", "IGR", "Splice_Region", "5'Flank", "lincRNA", "De_novo_Start_InFrame", "De_novo_Start_OutOfFrame", "Start_Codon_Ins", "Start_Codon_SNP", "Stop_Codon_Del")
     #Variant Classification with High/Moderate variant consequences. http://asia.ensembl.org/Help/Glossary?id=535
-  vc.nonSilent = c("Frame_Shift_Del", "Frame_Shift_Ins", "Splice_Site", "Translation_Start_Site",
-                   "Nonsense_Mutation", "Nonstop_Mutation", "In_Frame_Del",
-                   "In_Frame_Ins", "Missense_Mutation")
+
 
   maf.silent = maf[!Variant_Classification %in% vc.nonSilent] #Silent variants
   if(nrow(maf.silent) > 0){
