@@ -4,13 +4,10 @@
 \alias{math.score}
 \title{calculates MATH (Mutant-Allele Tumor Heterogeneity) score.}
 \usage{
-math.score(maf, plotFile = NULL, vafCol = NULL, sampleName = NULL,
-  vafCutOff = 0.075)
+math.score(maf, vafCol = NULL, sampleName = NULL, vafCutOff = 0.075)
 }
 \arguments{
 \item{maf}{an \code{\link{MAF}} object generated by \code{\link{read.maf}}}
-
-\item{plotFile}{file name for output plot.}
 
 \item{vafCol}{manually specify column name for vafs. Default looks for column 't_vaf'}
 
